--- a/doc/news.txt
+++ b/doc/news.txt
@@ -1,5 +1,9 @@
 
 = News =
+== Version 0.10.0 improved api ==
+'''20 July 2013''' The api is improved and a section added to the
+documentation about writing a plugin. The API is now close to a
+first complete version.
 
 == data-nil changes to data-placeholder ==
 '''10 July 2013''' The setting that used to be known as 'data-nil' is
