--- a/doc/README
+++ b/doc/README
@@ -24,10 +24,11 @@ mixture of the two depending on your needs.
 * Can also use javascript configuration.
 * Framework independent.
 * Works with IE6-8 and all modern browsers, including mobile.
-* Supports text input fields.
-* Supports textarea input fields.
-* Supports select dropdown fields.
-* Other kinds of input fields can be written as plugins
+* Directly supports text, textarea and select fields.
+* Other kinds of input editors can be written as plugins
+see [https://bitbucket.org/itinken/jinplace-extra jinplace-extra]
+(or [http://github.com/itinken/jinplace-extra github mirror])
+
 * Text like editing fields can optionally have OK and Cancel buttons
 with configurable text.
 * Data to be edited can be supplied as an attribute of the element,
